--- a/presentation.tex
+++ b/presentation.tex
@@ -45,33 +45,24 @@ doi=false,url=false,isbn=false]{biblatex}
 % 引入参考文献数据库
 \addbibresource[location=local]{reference.bib}
 
-%------------------------------------------------------------
-\logo{\includegraphics[width=.2\textwidth]{pic/njupt.motto.pdf}}
+%增加指导老师
+\newcommand{\theadvisor}{}
+\newcommand{\advisor}[1]{
+  \renewcommand{\theadvisor}{#1}
+}
 
-\setbeamerfont{title}{size=\Large}
-\setbeamerfont{subtitle}{size=\small}
-\setbeamerfont{author}{size=\small}
-\setbeamerfont{date}{size=\tiny}
-\setbeamerfont{institute}{size=\small}
+%------------------------------------------------------------
+%使用校训作为logo
+\logo{\includegraphics[width=.2\textwidth]{pic/njupt.motto.pdf}}
 
 % 设置段落首行缩进
 \setlength\parindent{20pt}
 \setlength\parskip{0pt}
 
-%------------------------------------------------------
-
-% %设置不同部分的字体，注意不同设备中安装的字体会不同
-% \renewcommand{\normalfont}{\fangsong}
-% \setbeamerfont{title}{family=\heiti,series=\bfseries}
-% %帧标题字体
-% \setbeamerfont{frametitle}{family=\heiti,series=\bfseries}
-% %帧子标题字体
-% \setbeamerfont{framesubtitle}{family=\kaishu,series=\bfseries}
-% \setbeamerfont{footline}{family=\kaishu,size=\tiny}
-
 %设置标题页
 \setbeamertemplate{title page}{%
 \includegraphics[height=1.2cm]{pic/njupt.logo_full.pdf}\par
+\vspace*{10pt}
 \centering
   \songti\selectfont
     {%
@@ -87,20 +78,17 @@ doi=false,url=false,isbn=false]{biblatex}
         \rule{\linewidth}{1pt}
     }\par\medskip
     
-    
     {%
     \usebeamercolor[fg]{author}
     \usebeamerfont{author}
-      汇报人：李倩茹、 沈梦辰
-
-      指导老师：丕艾谛
-    }\par\smallskip
+      汇报人：\insertauthor\par\smallskip
+      指导老师：\theadvisor\par\smallskip
+    }
+    \vspace*{10pt}
     {%
     \usebeamercolor[fg]{institute}
     \usebeamerfont{institute}
-        南京邮电大学
-
-        自动化学院、人工智能学院
+        \insertinstitute
     }\par\medskip
     \vspace*{10pt}
     {%
@@ -109,12 +97,6 @@ doi=false,url=false,isbn=false]{biblatex}
         \insertdate
     }\par
 }
-
-\title[南京邮电大学]{控制理论的三个月与三十年}
-\subtitle{Three Months and Tirty Years of Control}
-\author[李倩茹]{}
-\institute[自动化学院、人工智能学院]{}
-\date[南京 \today]{南京 \today}
 
 %------------------------------------------------------------
 %This block of commands puts the table of contents at the 
@@ -127,6 +109,11 @@ doi=false,url=false,isbn=false]{biblatex}
 %  \end{frame}
 % }
 \AtBeginSection[]{
+  \setbeamertemplate{background} 
+  {
+    \centering
+    \includegraphics[trim=0 100 0 0,height=\paperheight,angle=0]{pic/njupt.flower.pdf}
+  }
   \begin{frame}
   \vfill
   \centering
@@ -135,13 +122,50 @@ doi=false,url=false,isbn=false]{biblatex}
   \end{beamercolorbox}
   \vfill
   \end{frame}
+  \setbeamertemplate{background}{}
 }
+
+%------------------------------------------------------
+%正式内容从此处开始
+%------------------------------------------------------
+
+\title[南京邮电大学]{控制理论的三个月与三十年}
+\subtitle{Three Months and Tirty Years of Control}
+\author[李倩茹]{李倩茹、 沈梦辰}
+\advisor{丕艾谛}
+\institute[自动化学院、人工智能学院]{
+南京邮电大学
+
+自动化学院、人工智能学院
+}
+\date[南京 \today]{南京 \today}
+
 %------------------------------------------------------------
+
+%可以为不同的部分设置不同的字体
+% %设置不同部分的字体，注意不同设备中安装的字体会不同
+% \renewcommand{\normalfont}{\fangsong}
+% \setbeamerfont{title}{family=\heiti,series=\bfseries}
+% %帧标题字体
+% \setbeamerfont{frametitle}{family=\heiti,series=\bfseries}
+% %帧子标题字体
+% \setbeamerfont{framesubtitle}{family=\kaishu,series=\bfseries}
+% \setbeamerfont{footline}{family=\kaishu,size=\tiny}
+
+%设置字号大小
+\setbeamerfont{title}{size=\Large}
+\setbeamerfont{subtitle}{size=\small}
+\setbeamerfont{author}{size=\small}
+\setbeamerfont{date}{size=\tiny}
+\setbeamerfont{institute}{size=\small}
+
 
 \begin{document}
 
-%The next statement creates the title page.
+%创建标题页
 \frame{\titlepage}
+
+%创建目录页
 \setbeamertemplate{background} 
 {
     \raggedright
@@ -202,11 +226,18 @@ doi=false,url=false,isbn=false]{biblatex}
 
 
 \section*{致谢}  
-  \begin{frame}
-  \textcolor{rstd}{\Huge{\centerline{感谢聆听}}}
-  \vspace{8pt}
-  
-  \textcolor{rgreen}{\centerline{感谢各位答辩老师，恳请老师批评指正}}
-  \end{frame}
-
+\setbeamertemplate{background} 
+{
+  \centering
+  \includegraphics[trim=0 100 0 0,height=\paperheight,angle=0]{pic/njupt.flower.pdf}
+}
+\begin{frame}
+\vfill
+\centering
+\begin{beamercolorbox}[sep=8pt,center,shadow=true,rounded=true]{title}
+  \Huge{感谢聆听}
+\end{beamercolorbox}
+\vfill
+\end{frame}
+\setbeamertemplate{background}{}
 \end{document}
